--- a/src/__new/js/view/Tour/Tour.css
+++ b/src/__new/js/view/Tour/Tour.css
@@ -12,7 +12,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	background: rgba(0,0,0,.6);
+	background: rgba(0,0,0,.7);
 	z-index: 99998;
 }
 .tour-overlay.open{
@@ -33,6 +33,7 @@
 .tourbus-leg-inner {
 	color: white;
 	font-family: "Neucha", cursive;
+	max-width: 40rem;
 }
 .tourbus-leg-inner h5 {
 	font-size: 2rem;
@@ -41,9 +42,15 @@
 .tourbus-leg-inner p {
 	font-size: 1.3rem;
 	text-align: center;
+	max-width: 30rem;
+	margin: 0 auto;
+}
+.tourbus-leg-inner ul {
+	margin-bottom: 1rem;
 }
 .tourbus-leg-inner ul li {
 	font-size: 1.3rem;
+	list-style: circle;
 }
 .tourbus-buttons {
 	text-align: center;
