Snow#Tour text corrections

--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -51,7 +51,7 @@
 	</div>
 </li>
 <li data-el='#overview-header-scope' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
-	<h5>Selcted configuration</h5>
+	<h5>Selected configuration</h5>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
@@ -72,7 +72,7 @@
 </li>
 <li data-el='#add-composites-button' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Add custom composites</h5>
-	<p>Generate more n-day composites for give configuration.</p>
+	<p>Generate more n-day composites for given configuration.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
@@ -98,7 +98,7 @@
 		<li>Cloud-free coverage - % of selected AOI covered by cloud-free data (i.e. classified as Snow & NoSnow pixels)</li>
 		<li>Distribution of coverage - Class distribution of Snow, NoSnow, Cloud classes in % within the area covered by valid data</li>
 	</ul>
-	<p>In the bottom you can export the statistics for all available composites in a form of an Excel file or export composites in GeoTIFF data format.</p>
+	<p>Using the buttons in the bottom you, can export the statistics for all available composites in a form of an Excel file or export composites in GeoTIFF data format.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Select composite</a>
 	</div>
