Snow#help content update

--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -1,6 +1,6 @@
 <li data-orientation='centered' data-highlight="true">
 	<h5>Let's take a tour through SnowPortal</h5>
-	<p>SnowPortal functions will be shortly introduced. Click on the ‘Next’ button to navigate through the Help and on the ‘Quit Tour’ button in the bottom right corner to close the Help.
+	<p>SnowPortal functions will be shortly introduced. Click on the ‘Next’ button to navigate through the Help and on the ‘Quit Tour’ button at the bottom right corner to close the Help.
 	</p>
 	<div class="tourbus-buttons">
 		<a href='#' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
@@ -21,22 +21,24 @@
 </li>
 <li data-el='#scope-config-area' data-iframe='#snow-iframe' data-orientation='top' data-highlight="true">
 	<h5>Select Area</h5>
-	<p>Select Area of Interest (AOI) from a list of European countries. </p>
+	<p>Select Area of Interest (AOI) from the list of European countries. </p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
 <li data-el='#scope-config-sensors' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Select Sensors</h5>
-	<p>MODIS and Sentinel-3 data can be combined in order to perform Snow & Cloud analysis. Select Sentinel-2 to perform Cloud analysis. Sentinel-2 cannot be combined with the other satellites/ sensors.
+	<p>MODIS and Sentinel-3 data can be combined in order to perform Snow & Cloud analysis.
 </p>
+	<p>Select Sentinel-2 to perform Cloud analysis. Sentinel-2 cannot be combined with the other satellites/ sensors.
+	</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
 <li data-el='#scope-config-time-range' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Select Time Range</h5>
-	<p>Select Time range by setting a ‘Start’ and ‘End’ date. The longer the period will be, the longer you have to wait for the data to be prepared.
+	<p>Select Time range by setting a ‘Start’ and ‘End’ date. The longer the period the longer the proccessing time.
 	</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
@@ -58,35 +60,45 @@
 </li>
 <li data-el='#overview-header-scenes' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Scenes dashboard</h5>
-	<p>Statistical overview of all scenes for given configuration.</p>
+	<ul>
+		<li>Statistical overview of all scenes for given configuration.</li>
+		<li>Class distribution graph: Average class distribution (Snow, NoSnow, Cloud, and NoData classes)
+			within the area covered by data.</li>
+		<li>Number of available scenes per sensor/ satellite.</li>
+	</ul>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
 <li data-el='#overview-collections' data-iframe='#snow-iframe' data-orientation='top' data-highlight="true">
 	<h5>Composites dashboard</h5>
-	<p>Statistical overview for each set of n-days composites.</p>
+	<ul>
+		<li>Statistical overview for each set of n-days composites.</li>
+		<li>Class distribution graph: Average class distribution (Snow, NoSnow, Cloud, and NoData classes)
+			within the area covered by data.</li>
+		<li>Timeline graph: Class distribution in time (x = time [n-days], y = class distribution [%]).</li>
+	</ul>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
 <li data-el='#add-composites-button' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Add custom composites</h5>
-	<p>Generate more n-day composites for given configuration.</p>
+	<p>Generate custom n-day composites for given configuration.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
 <li data-el='#compare-composites-button' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Compare composites</h5>
-	<p>View a list of all generated n-day composites and display them in the map.</p>
+	<p>View a list of all generated n-day composites and display them on the map.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
 <li data-el='.ptr-overview-collection .ptr-button' data-iframe='#snow-iframe' data-orientation='left'  data-highlight="true">
-	<h5>Show composites for collection</h5>
-	<p>View a list of all generated composites for given period.</p>
+	<h5>Show composites for n-day composites collection</h5>
+	<p>View the list of all generated composites for given period.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show composites</a>
 	</div>
@@ -94,17 +106,17 @@
 <li data-el='#composites-list-header' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
 	<h5>Composites list</h5>
 	<ul>
-		<li>AOI Coverage - % of selected AOI covered by valid data (i.e. Snow, NoSnow, Cloud pixels)</li>
+		<li>AOI Coverage - % of selected AOI covered by data-</li>
 		<li>Cloud-free coverage - % of selected AOI covered by cloud-free data (i.e. classified as Snow & NoSnow pixels)</li>
-		<li>Distribution of coverage - Class distribution of Snow, NoSnow, Cloud classes in % within the area covered by valid data</li>
+		<li>Distribution of coverage - Class distribution of Snow, NoSnow, Cloud and NoData classes in % within the area covered by data</li>
 	</ul>
-	<p>Using the buttons in the bottom you, can export the statistics for all available composites in a form of an Excel file or export composites in GeoTIFF data format.</p>
+	<p>Using the buttons at the bottom you can export the statistics for all available composites in a form of an Excel file or export composites in GeoTIFF data format.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Select composite</a>
 	</div>
 </li>
-<li data-el='#composites .ptr-composites-composite' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
-	<h5>Select composite and show it on the map</h5>
+<li data-el='#composites .ptr-composites-composite .ptr-button:first-child' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
+	<h5>Select composite and display it on the map</h5>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show on map</a>
 	</div>
