Snow#tour - wait until the data are loaded

--- a/src/__new/js/view/Tour/Tour.css
+++ b/src/__new/js/view/Tour/Tour.css
@@ -92,3 +92,9 @@
 	content: "\f060";
 	margin-right: .5rem;
 }
+
+/* loading */
+.hidden-while-loading.hidden,
+.loading-info.hidden {
+	display: none;
+}
