--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -53,9 +53,10 @@
 	</div>
 </li>
 <li data-el='#overview-header-scope' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
-	<h5>Selected configuration</h5>
+	<h5 class="hidden-while-loading hidden">Selected configuration</h5>
+	<h5 class="loading-info">Wait until the data are loaded...</h5>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next hidden-while-loading hidden'>Next</a>
 	</div>
 </li>
 <li data-el='#overview-header-scenes' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
