Snow#tour - quit and continue

--- a/src/__new/js/view/Tour/Tour.css
+++ b/src/__new/js/view/Tour/Tour.css
@@ -23,6 +23,11 @@
 	bottom: 0;
 	right: 1rem;
 }
+.tourbus-stop-continue {
+	position: absolute;
+	bottom: 3.5rem;
+	right: 1rem;
+}
 
 /* legs */
 .tourbus-leg {
