--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -54,7 +54,7 @@
 </li>
 <li data-el='#overview-header-scope' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5 class="hidden-while-loading hidden">Selected configuration</h5>
-	<h5 class="loading-info">Wait until the data are loaded...</h5>
+	<h5 class="loading-info">Wait until the data is loaded...</h5>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next hidden-while-loading hidden'>Next</a>
 	</div>
@@ -85,7 +85,7 @@
 </li>
 <li data-el='#add-composites-button' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Add custom composites</h5>
-	<p>Generate custom n-day composites for given configuration.</p>
+	<p>Generate custom n-day collection of composites for given configuration.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
@@ -98,7 +98,7 @@
 	</div>
 </li>
 <li data-el='.ptr-overview-collection .ptr-button' data-iframe='#snow-iframe' data-orientation='left'  data-highlight="true">
-	<h5>Show composites for n-day composites collection</h5>
+	<h5>Show composites per n-day collection</h5>
 	<p>View the list of all generated composites for given period.</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show composites</a>
