Tour content updates

--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -63,8 +63,7 @@
 	<h5>Scenes dashboard</h5>
 	<ul>
 		<li>Statistical overview of all scenes for given configuration.</li>
-		<li>Class distribution graph: Average class distribution (Snow, NoSnow, Cloud, and NoData classes)
-			within the area covered by data.</li>
+		<li>Class distribution graph: Average class distribution within the area covered by data.</li>
 		<li>Number of available scenes per sensor/ satellite.</li>
 	</ul>
 	<div class="tourbus-buttons">
@@ -75,8 +74,7 @@
 	<h5>Composites dashboard</h5>
 	<ul>
 		<li>Statistical overview for each set of n-days composites.</li>
-		<li>Class distribution graph: Average class distribution (Snow, NoSnow, Cloud, and NoData classes)
-			within the area covered by data.</li>
+		<li>Class distribution graph: Average class distribution within the area covered by data.</li>
 		<li>Timeline graph: Class distribution in time (x = time [n-days], y = class distribution [%]).</li>
 	</ul>
 	<div class="tourbus-buttons">
@@ -109,7 +107,7 @@
 	<ul>
 		<li>AOI Coverage - % of selected AOI covered by data-</li>
 		<li>Cloud-free coverage - % of selected AOI covered by cloud-free data (i.e. classified as Snow & NoSnow pixels)</li>
-		<li>Distribution of coverage - Class distribution of Snow, NoSnow, Cloud and NoData classes in % within the area covered by data</li>
+		<li>Distribution of coverage - Class distribution within the area covered by data.</li>
 	</ul>
 	<p>Using the buttons at the bottom you can export the statistics for all available composites in a form of an Excel file or export composites in GeoTIFF data format.</p>
 	<div class="tourbus-buttons">
