Tour legs - previous

--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -16,6 +16,7 @@
 		<li>About: Additional information about the application</li>
 	</ul>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -23,6 +24,7 @@
 	<h5>Select Area</h5>
 	<p>Select Area of Interest (AOI) from the list of European countries. </p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -33,6 +35,7 @@
 	<p>Select Sentinel-2 to perform Cloud analysis. Sentinel-2 cannot be combined with the other satellites/ sensors.
 	</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -41,6 +44,7 @@
 	<p>Select Time range by setting a ‘Start’ and ‘End’ date. The longer the period the longer the proccessing time.
 	</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -49,6 +53,7 @@
 	<p>Display available scenes and 1-day composites for selected configuration.
 	</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -56,6 +61,7 @@
 	<h5 class="hidden-while-loading hidden">Selected configuration</h5>
 	<h5 class="loading-info">Wait until the data is loaded...</h5>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev hidden-while-loading hidden'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next hidden-while-loading hidden'>Next</a>
 	</div>
 </li>
@@ -67,6 +73,7 @@
 		<li>Number of available scenes per sensor/ satellite.</li>
 	</ul>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -78,6 +85,7 @@
 		<li>Timeline graph: Class distribution in time (x = time [n-days], y = class distribution [%]).</li>
 	</ul>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -85,6 +93,7 @@
 	<h5>Add custom composites</h5>
 	<p>Generate custom n-day collection of composites for given configuration.</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -92,6 +101,7 @@
 	<h5>Compare composites</h5>
 	<p>View a list of all generated n-day composites and display them on the map.</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -99,6 +109,7 @@
 	<h5>Show composites per n-day collection</h5>
 	<p>View the list of all generated composites for given period.</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show composites</a>
 	</div>
 </li>
@@ -111,15 +122,18 @@
 	</ul>
 	<p>Using the buttons at the bottom you can export the statistics for all available composites in a form of an Excel file or export composites in GeoTIFF data format.</p>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Select composite</a>
 	</div>
 </li>
 <li data-el='#composites .ptr-composites-composite .ptr-button:first-child' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
 	<h5>Select composite and display it on the map</h5>
 	<div class="tourbus-buttons">
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show on map</a>
 	</div>
 </li>
 <li data-el='#map-holder' data-orientation='left'  data-highlight="true">
 	<h5>Explore composite on the map</h5>
+	<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
 </li>
