Tour buttons update

--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -1,7 +1,8 @@
 
 <div class="tour-overlay">
-	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-continue'>Quit & continue here</a>
-	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-common'>Quit & go back to start</a>
+	<span>Quit tour and ...</span>
+	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-continue'>Start by scope selection</a>
+	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-common'>Explore this use case</a>
 </div>
 <ol class="tourbus-legs" id={{id}}>
 	{{content}}
