--- a/src/__new/js/view/Tour/Tour.css
+++ b/src/__new/js/view/Tour/Tour.css
@@ -18,15 +18,27 @@
 .tour-overlay.open{
 	display: block;
 }
+.tour-overlay span {
+	right: 1rem;
+	bottom: 7.5rem;
+	position: absolute;
+	color: white;
+	font-size: 1.4rem;
+	font-family: "Neucha", cursive;
+	width: 14rem;
+	text-align: center;
+}
 .tourbus-stop-common{
 	position: absolute;
 	bottom: 0;
 	right: 1rem;
+	width: 14rem;
 }
 .tourbus-stop-continue {
 	position: absolute;
 	bottom: 3.5rem;
 	right: 1rem;
+	width: 14rem;
 }
 
 /* legs */
