Snow tour - better prev and Quit buttons

--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -1,8 +1,8 @@
 
 <div class="tour-overlay">
 	<span>Quit tour and ...</span>
-	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-continue'>Start by scope selection</a>
-	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-common'>Explore this use case</a>
+	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-common'>Start by scope selection</a>
+	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-continue hidden-while-loading hidden'>Explore this use case</a>
 </div>
 <ol class="tourbus-legs" id={{id}}>
 	{{content}}
