--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
@@ -9,7 +9,7 @@
 .map-tool-trigger:hover {
 	background: rgba(0,0,0,.07);
 }
-.map-tool-trigger.active span.map-tool-trigger-label-title {
+.map-tool-trigger.active .map-tool-trigger-label-title {
 	color: rgba(201,45,66,1);
 }
 .map-tool-trigger.active .map-tool-icon-svg path {
@@ -20,7 +20,8 @@
 	display: flex;
 	flex: 1;
 }
-span.map-tool-trigger-label-title {
+.map-tool-trigger-label-title {
+	color: #555;
 	font-size: .9rem;
 	padding: 0 .2rem;
 }
@@ -35,7 +36,7 @@ span.map-tool-trigger-label-title {
 	height: 1.1rem;
 }
 .map-tool-icon-svg path {
-	fill: #888;
+	fill: #777;
 }
 
 /* tool toggle */
@@ -52,8 +53,8 @@ span.map-tool-trigger-label-title {
 .toggle-switch {
 	position: relative;
 	display: inline-block;
-	width: 35px;
-	height: 22px;
+	width: 30px;
+	height: 18px;
 }
 
 .toggle-switch input {display:none;}
@@ -73,10 +74,10 @@ span.map-tool-trigger-label-title {
 .toggle-switch-slider:before {
 	position: absolute;
 	content: "";
-	height: 16px;
-	width: 16px;
-	left: 3px;
-	bottom: 3px;
+	height: 14px;
+	width: 14px;
+	left: 2px;
+	bottom: 2px;
 	background-color: white;
 	-webkit-transition: .4s;
 	transition: .4s;
@@ -91,9 +92,9 @@ input:focus + .toggle-switch-slider {
 }
 
 input:checked + .toggle-switch-slider:before {
-	-webkit-transform: translateX(13px);
-	-ms-transform: translateX(13px);
-	transform: translateX(13px);
+	-webkit-transform: translateX(11px);
+	-ms-transform: translateX(11px);
+	transform: translateX(11px);
 }
 
 /* Rounded sliders */
