--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.html
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.html
@@ -1,7 +1,7 @@
 <div class="map-tool-trigger" id="{{id}}">
 	<div class="map-tool-trigger-label">
 		<div class="map-tool-icon"></div>
-		<span class="map-tool-trigger-label-title">{{label}}</span>
+		<div class="map-tool-trigger-label-title">{{label}}</div>
 	</div>
 	<div class="map-tool-trigger-toggle">
 		<label class="toggle-switch">
