Layer tool window before rendering of content

--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -1,4 +1,4 @@
-<div id="{{id}}">
+<div id="{{id}}" class="{{classes}} floating-window">
 	<div class="feature-info-window-header">
 		<div class="feature-info-title">{{featureName}}</div>
 		<div class="feature-info-close">
@@ -9,8 +9,6 @@
 		</div>
 	</div>
 	<div class="feature-info-window-body">
-		<table>
-		</table>
 	</div>
 	<div class="feature-info-window-footer">
 		<div class="floater-row">
