--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -1,4 +1,4 @@
-<div id="floater-{{widgetId}}" class="floater {{floaterClass}}">
+<div id="floater-{{widgetId}}" class="floater floating-window {{floaterClass}}">
 	<div class="floater-header">
 		<span>{{name}}</span>
 		<div class="floater-tools-container">
