--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.html
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.html
@@ -1,4 +1,4 @@
-<div class="tool-window {{cls}}" id="{{id}}">
+<div class="floating-window tool-window {{cls}}" id="{{id}}">
 	<div class="tool-window-header layer-tool-floater-header">
 		<span>{{name}}</span>
 		<div class="tool-window-tools-container">
