--- a/src/__new/js/view/settings/Settings.html
+++ b/src/__new/js/view/settings/Settings.html
@@ -1,4 +1,4 @@
-<div class="tool-window settings-window" id="{{id}}">
+<div class="floating-window tool-window settings-window" id="{{id}}">
     <div class="tool-window-header">
         <span>{{settings}}</span>
         <div class="tool-window-tools-container">
