--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -1,4 +1,4 @@
-#feature-info-window {
+.fi-window {
 	background: rgba(255,255,255,.95);
 	border: 1px solid #ccc;
 	border-radius: .1rem;
@@ -17,21 +17,17 @@
 	max-width: 40rem;
 	z-index: 10000;
 }
-#feature-info-window.no-data {
+.fi-window.no-data {
 	height: 5rem;
 }
-#feature-info-window.no-data .feature-info-settings,
-#feature-info-window.no-data .feature-info-window-footer {
-	display: none;
-}
-#feature-info-window.no-data .feature-info-window-body {
+.fi-window.no-data .feature-info-window-body {
 	height: calc(100% - 1.7rem);
 }
 
-#feature-info-window.active {
+.fi-window.active {
 	z-index: 10001;
 }
-#feature-info-window .feature-info-window-header {
+.fi-window .feature-info-window-header {
 	border-bottom: 2px solid #ddd;
 	font-size: .85rem;
 	font-weight: 700;
@@ -40,58 +36,72 @@
 	height: 1.5rem;
 	cursor: move;
 }
-#feature-info-window .feature-info-title {
+.fi-window .feature-info-title {
 	float: left;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: calc(100% - 45px);
 }
-#feature-info-window .feature-info-close,
-#feature-info-window .feature-info-settings {
+.fi-window .feature-info-close,
+.fi-window .feature-info-settings {
 	cursor: pointer;
 	float: right;
 	margin-left: .1rem;
 	width: 18px;
 }
-#feature-info-window .feature-info-settings img {
+.fi-window.has-settings.no-data .feature-info-settings,
+.fi-window .feature-info-settings {
+	display: none;
+}
+.fi-window.has-settings .feature-info-settings {
+	display: inline-block;
+}
+.fi-window .feature-info-settings img {
 	width: 14px;
 }
-#feature-info-window .feature-info-window-body {
+.fi-window .feature-info-window-body {
 	margin: 0 .2rem .2rem 0;
 	overflow-x: hidden;
 	overflow-y: auto;
 	height: calc(100% - 3.7rem);
 }
-#feature-info-window .feature-info-window-footer {
+.fi-window .feature-info-window-footer {
 	border-top: 2px solid #ddd;
 	height: 2rem;
 	margin-right: .2rem;
 	padding-top: .1rem;
 	text-align: center;
 }
-#feature-info-window .feature-info-window-body table {
+.fi-window .feature-info-window-footer,
+.fi-window.has-export.no-data .feature-info-window-footer{
+	display: none;
+}
+.fi-window.has-export .feature-info-window-footer {
+	display: block;
+}
+.fi-window .feature-info-window-body table {
 	width: 100%;
 }
-#feature-info-window .feature-info-window-body table tr {
+.fi-window .feature-info-window-body table tr {
 	border-bottom: 1px solid #ddd;
 }
-#feature-info-window .feature-info-window-body table tr td {
+.fi-window .feature-info-window-body table tr td {
 	font-size: .75rem;
 	padding: .15rem .2rem;
 }
-#feature-info-window .feature-info-window-body table tr td i {
+.fi-window .feature-info-window-body table tr td i {
 	color: #888;
 	font-style: normal;
 	font-weight: 500;
 }
-#feature-info-window .feature-info-window-body table tr:hover td {
+.fi-window .feature-info-window-body table tr:hover td {
 	background: rgba(230,230,230,.8);
 }
-#feature-info-window .feature-info-window-body table tr td:first-child {
+.fi-window .feature-info-window-body table tr td:first-child {
 	font-weight: 600;
 }
-#feature-info-window .feature-info-window-body table tr td:last-child {
+.fi-window .feature-info-window-body table tr td:last-child {
 	text-align: right;
 }
 
@@ -109,7 +119,7 @@
 
 /* overlay*/
 
-#feature-info-window .overlay {
+.fi-window .overlay {
 	display: none;
 	height: 100%;
 	width: 100%;
