--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -1,11 +1,13 @@
 <div id="{{id}}" class="{{classes}} floating-window">
 	<div class="feature-info-window-header">
 		<div class="feature-info-title">{{featureName}}</div>
-		<div class="feature-info-close">
-			<img title="Close" src="__new/img/close.png">
-		</div>
-		<div class="feature-info-settings">
-			<img title="Settings" src="__new/img/settings-gray.png">
+		<div class="feature-info-tools">
+			<div class="feature-info-close">
+				<img title="Close" src="__new/img/close.png">
+			</div>
+			<div class="feature-info-settings">
+				<img title="Settings" src="__new/img/settings-gray.png">
+			</div>
 		</div>
 	</div>
 	<div class="feature-info-window-body">
