--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -1,13 +1,11 @@
 .fi-window {
 	background: rgba(255,255,255,.95);
-	border: 1px solid #ccc;
 	border-radius: .1rem;
-	box-shadow: 0 0 1px rgba(136,136,136,.5);
+	box-shadow: 0 0 4px rgb(136, 136, 136);
 	color: #555;
 	display: none;
 	height: 13rem;
 	left: 100px;
-	padding: .3rem 0 .3rem .5rem;
 	position: absolute;
 	right: 100px;
 	resize: both;
@@ -21,70 +19,80 @@
 	height: 5rem;
 }
 .fi-window.no-data .feature-info-window-body {
-	height: calc(100% - 1.7rem);
+	height: calc(100% - 2.1rem);
 }
 
 .fi-window.active {
 	z-index: 10001;
 }
 .fi-window .feature-info-window-header {
-	border-bottom: 2px solid #ddd;
+	background: #ddd;
 	font-size: .85rem;
 	font-weight: 700;
-	padding: 0 0 .2rem .1rem;
-	margin-right: .2rem;
-	height: 1.5rem;
+	padding: 0 .3rem 0 .5rem;
+	height: 1.8rem;
+	line-height: 1.8rem;
 	cursor: move;
+	display: flex;
 }
 .fi-window .feature-info-title {
-	float: left;
+	flex: 1;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: calc(100% - 45px);
 }
+.fi-window .feature-info-tools {
+	display: flex;
+	flex-direction: row-reverse;
+}
 .fi-window .feature-info-close,
 .fi-window .feature-info-settings {
 	cursor: pointer;
-	float: right;
 	margin-left: .1rem;
-	width: 18px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 1.1rem;
+	height: 100%;
 }
 .fi-window.has-settings.no-data .feature-info-settings,
 .fi-window .feature-info-settings {
 	display: none;
 }
 .fi-window.has-settings .feature-info-settings {
-	display: inline-block;
+	display: flex;
 }
 .fi-window .feature-info-settings img {
 	width: 14px;
 }
 .fi-window .feature-info-window-body {
-	margin: 0 .2rem .2rem 0;
+	padding: .2rem .3rem;
 	overflow-x: hidden;
 	overflow-y: auto;
-	height: calc(100% - 3.7rem);
+	height: calc(100% - 2.1rem);
+}
+.fi-window.has-footer .feature-info-window-body {
+	height: calc(100% - 4.1rem);
 }
 .fi-window .feature-info-window-footer {
 	border-top: 2px solid #ddd;
 	height: 2rem;
-	margin-right: .2rem;
-	padding-top: .1rem;
+	padding: .2rem .5rem;
 	text-align: center;
 }
 .fi-window .feature-info-window-footer,
-.fi-window.has-export.no-data .feature-info-window-footer{
+.fi-window.has-footer.no-data .feature-info-window-footer{
 	display: none;
 }
-.fi-window.has-export .feature-info-window-footer {
+.fi-window.has-footer .feature-info-window-footer {
 	display: block;
 }
 .fi-window .feature-info-window-body table {
 	width: 100%;
 }
 .fi-window .feature-info-window-body table tr {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #e5e5e5;
 }
 .fi-window .feature-info-window-body table tr td {
 	font-size: .75rem;
