--- a/src/__new/js/view/widgets/AggregatedChartWidget/AggregatedChartWidget.css
+++ b/src/__new/js/view/widgets/AggregatedChartWidget/AggregatedChartWidget.css
@@ -30,8 +30,8 @@
 #floater-functional-urban-area-result .floater-body > div:nth-child(even){
     padding: .5rem;
     background: rgba(200,200,200,.1);
-    border-bottom: 1px solid #e5e5e5;
-    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
 }
 
 #floater-functional-urban-area-result .floater-row.slider-box,
