--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
@@ -1,6 +1,6 @@
 /* triggers */
 .map-tool-trigger {
-	border-bottom: 1px solid #e5e5e5;
+	border-bottom: 1px solid #ddd;
 	cursor: pointer;
 	display: flex;
 	line-height: 2;
@@ -41,7 +41,6 @@
 
 /* tool toggle */
 .map-tool-trigger-toggle {
-	flex-basis: 5rem;
 	text-align: right;
 	padding-right: .2rem;
 	display: flex;
