--- a/src/css/project/urbis.css
+++ b/src/css/project/urbis.css
@@ -121,7 +121,7 @@
 .urbis .widget-button[disabled=disabled] {
     pointer-events: none;
     color: #bbb;
-    background-color: #e5e5e5;
+    background-color: #ddd;
     border-bottom: 2px solid #ddd;
 }
 .urbis .widget-button:hover {
