--- a/src/__new/js/view/components/Collapse/Collapse.html
+++ b/src/__new/js/view/components/Collapse/Collapse.html
@@ -3,7 +3,7 @@
 		<div class="component-collapse-title">{{title}}</div>
 		<div class="component-collapse-arrow"></div>
 	</div>
-	<div class="component-collapse-body">
+	<div class="component-collapse-body" id="{{id}}-body">
 		{{content}}
 	</div>
 </div>
