--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -133,7 +133,7 @@
 	display: none;
 	height: 100%;
 	width: 100%;
-	background: rgba(255,255,255,.9) url(../../../../img/loading.gif) no-repeat 50% 50%;
+	background: rgba(255,255,255,.9);
 	position: absolute;
 	top: 0;
 	left: 0;
