--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -17,5 +17,16 @@
 			<div class="widget-button widget-button-export" id="export-feature-info-csv">{{exportToXls}}</div>
 		</div>
 	</div>
-	<div class="overlay"></div>
+	<div class="overlay">
+		<div id="loading-screen-content-wrap">
+			<div id="loading-screen-content">
+				<div class="a-loader-container small blackandwhite">
+					<i class="i1"></i>
+					<i class="i2"></i>
+					<i class="i3"></i>
+					<i class="i4"></i>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
