--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -14,5 +14,15 @@
 	<div class="floater-footer">
 	</div>
 	<div class="floater-overlay">
+		<div id="loading-screen-content-wrap">
+			<div id="loading-screen-content">
+				<div class="a-loader-container small blackandwhite">
+					<i class="i1"></i>
+					<i class="i2"></i>
+					<i class="i3"></i>
+					<i class="i4"></i>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
