--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -7,7 +7,7 @@ html, body {
 body, body.x-body {
 	font-family: "Open Sans", sans-serif;
 	font-size: 12px;
-	background: #e5e3df url("../images/loading.gif") no-repeat 50% 50%;
+	background: #e5e3df;
 }
 
 body.application {
@@ -1074,6 +1074,11 @@ Apache license 2.0, Copyright (c) 2015 Tom Adamec */
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
+.a-loader-container.small {
+	width: 40px;
+	height: 40px;
+	font-size: 40px;
+}
 @keyframes a-loader {
 	0% {
 		transform: rotate(0deg);
@@ -1114,5 +1119,17 @@ Apache license 2.0, Copyright (c) 2015 Tom Adamec */
 	/*border-top-color: rgba(255,255,0,.6);*/
 	border-top-color: rgba(245,245,0,.6);
 	/*border-top-color: rgba(255,255,255,.45);*/
+}
+.a-loader-container.blackandwhite i.i1 {
+	border-top-color: rgba(0,0,0,.2);
+}
+.a-loader-container.blackandwhite i.i2 {
+	border-top-color: rgba(255,255,255,.35);
+}
+.a-loader-container.blackandwhite i.i3 {
+	border-top-color: rgba(0,0,0,.3);
+}
+.a-loader-container.blackandwhite i.i4 {
+	border-top-color: rgba(255,255,255,.45);
 }
 /* A loader end */
