--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -305,3 +305,21 @@ body.mode-3d .floater.only-3d.open {
     margin: .2rem 0;
     font-size: .9rem;
 }
+
+/* widget form */
+.widget-form-row {
+    line-height: 2rem;
+    margin-bottom: .5rem;
+}
+.widget-form-row label {
+    display: flex;
+    width: 100%;
+}
+.widget-form-row span {
+    flex: 1;
+    font-size: .85rem;
+}
+.widget-form-row select {
+    font-size: .85rem;
+    min-width: 10rem;
+}
