hide export to shp

--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -8,6 +8,6 @@
 	<div class="widget-button widget-button-export" id="export-xls" disabled="disabled">{{exportToXls}}</div>
 </div>
 <div class="floater-row row-export">
-	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">{{exportToShp}}</div>
+	<!--<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">{{exportToShp}}</div>-->
 	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">{{exportToCsv}}</div>
 </div>
