--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -782,6 +782,9 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d) {
 #top-toolbar .item#top-toolbar-share-view::before {
 	content: '\f1e0';
 }
+#top-toolbar .item#top-toolbar-share-view.open::before {
+	color: #c92d42;
+}
 #top-toolbar .item#top-toolbar-context-help::before {
 	background: url('../images/icons/context-help.svg') center center no-repeat;
 }
