--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -306,20 +306,46 @@ body.mode-3d .floater.only-3d.open {
     font-size: .9rem;
 }
 
+/* widget section */
+.widget-section {
+    margin-bottom: 2rem;
+}
+.widget-section h5 {
+    font-size: .9rem;
+    font-weight: 700;
+    color: #555;
+    margin-bottom: .2rem;
+}
+.widget-section p {
+    font-size: .8rem;
+    margin-bottom: .3rem;
+}
+
 /* widget form */
 .widget-form-row {
-    line-height: 2rem;
     margin-bottom: .5rem;
 }
 .widget-form-row label {
     display: flex;
+    flex-direction: column;
     width: 100%;
+    line-height: 1.7;
 }
 .widget-form-row span {
-    flex: 1;
+    font-size: .8rem;
+    font-weight: 600;
+}
+.widget-form-row select,
+.widget-form-row input,
+.widget-form-row textarea {
     font-size: .85rem;
+    line-height: 1.5rem;
+    max-width: 90%;
+    border: 1px solid #bbb;
+}
+.widget-form-row textarea {
+    height: 3rem;
 }
 .widget-form-row select {
-    font-size: .85rem;
-    min-width: 10rem;
+    height: 1.8rem;
 }
