widgets styles and zIndex

--- a/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
@@ -1,7 +1,8 @@
 #floater-custom-views-widget {
 	right: 10rem;
 	top: 10rem;
-	height: 10rem;
+	min-height: 30rem;
+	min-width: 40rem;
 }
 
 #floater-custom-views-widget .floater-body {
