--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -42,8 +42,8 @@
     padding: 0 .5rem;
 }
 .floater-header > span {
-    font-size: .9rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: 500;
     line-height: 1.6rem;
 }
 
@@ -139,6 +139,7 @@ body.mode-3d .floater.only-3d.open {
 }
 .floater-warning {
     display: none;
+    background: white;
     position: absolute;
     height: calc(100% - 2.7rem);
     z-index: 10;
